src/app/page-header/page-header.component.scss
@import '../../styles.scss';

.example-container {
    position: absolute;
    display: flex;
    flex-direction: column;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
}

.desktop-nav {
    display: none;
}

mat-sidenav-container {
    z-index: 10;
}

mat-sidenav {
    position: fixed;
    width: 275px;
    height: 100vh;
    top: 0;

    a {
        color: black;
        font-weight: 500;
        width: 98%;
        margin: 0px;

        &.underline {
            border-right: 8px solid $primary;
        }       
    }

    @media(min-width: 375px) {
        width: 320px;
    }
}

mat-sidenav-content {
    position: fixed;
    top: 0;
    height: 100vh;
    width: 100vw;
    color: black;
}

mat-toolbar {
    position: fixed;
    top: 0;
    z-index: 1;
}

@media(min-width: $s-medium) {
    .desktop-nav {
        display: block;
        padding: 0;

            button {
                border-radius: 0;
                color: black;
                font-size: 15px;
                font-weight: 500;
                height: 100%;

                &.underline {
                    border-bottom: 4px $primary solid;
                }
            }
    }

    .mobile-nav {
        display: none;
    }
}

